# ablations_exp

./: .gitignore  README.md  download_dataset_fineweb-edu.py  download_dataset_fineweb.py  download_dataset_image.py  download_dataset_synth.py  download_dataset_tinystories.py  main.py  makefile  pyproject.toml  server_setup.sh  server_setup_fineweb-edu.sh
core/: dataloader.py  generate.py  model.py  tokenization.py  train_model.py
