[project]
name = "albations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.34.4",
    "numpy>=2.3.3",
    "tokenizers>=0.22.0",
    "torch>=2.8.0",
    "wandb>=0.21.4",
]
