[project]
name = "albations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.34.4",
    "numpy>=2.3.3",
    "psutil>=7.2.1",
    "tokenizers>=0.22.0",
    "torch==2.9.1",
    "wandb>=0.21.4",
]
